Name:                lucid-extras
Version:             0.2.2
Synopsis:            Generate more HTML with Lucid - Bootstrap, Rdash, Vega-Lite, Leaflet JS, Email.
Description:         Generate more HTML with Lucid - Bootstrap, Rdash, Vega-Lite, Leaflet JS, Email. Provides functions to generate rich web page elements for infographics, geographical maps, and more.
License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen <tanielsen@gmail.com>
Maintainer:          Marco Zocca <ocramz fripost org>
build-type:          Simple
Cabal-Version: 	     >= 1.10
homepage:            https://github.com/diffusionkinetics/open/lucid-extras
bug-reports:         https://github.com/diffusionkinetics/open/issues
category:            Web, Graphics
Tested-With:         GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
extra-source-files:
                   changelog.md

source-repository head
  type:     git
  location: https://github.com/diffusionkinetics/open

Library
   ghc-options:       -Wall
   hs-source-dirs:    lib
   default-language:  Haskell2010

   Exposed-modules:
                   Lucid.Bootstrap3
                 , Lucid.PreEscaped
                 , Lucid.DataTables
                 , Lucid.Rdash
                 , Lucid.Leaflet
                 , Lucid.Tables
                 , Lucid.VegaLite
   Build-depends:
                 base                    >= 4.6 && < 5
               , aeson
               , lucid
               , text
               , blaze-builder
               , bytestring

Test-suite            site-gen
    type:       exitcode-stdio-1.0
    ghc-options:      -Wall
    hs-source-dirs:   site-gen
    main-is:          Main.hs
    default-language:  Haskell2010
    other-modules:    DevelMain
    Build-Depends:    base                    >= 4.6 && < 5
                    , directory               >= 1.2
                    , lucid-extras
                    , lucid