Name:                stanhs
Version:             0.1.0
Synopsis:            Bindings to Stan (Bayesian inference with MCMC)
Description:
                     Bindings to Stan, a language for Bayesian inference with MCMC and other methods

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen
Maintainer:          tanielsen@gmail.com
build-type:          Simple
Cabal-Version: 	     >= 1.8
homepage:            https://github.com/diffusionkinetics/open/stanhs
bug-reports:         https://github.com/diffusionkinetics/open/issues
category:            Control, Statistics
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1


extra-source-files:
                   changelog.md


Library
   ghc-options:       -Wall -fno-warn-type-defaults -fno-warn-orphans
   hs-source-dirs:    lib

   Exposed-modules:
                   Stan.AST
                 , Stan.AST.Pretty
                 , Stan.Data
                 , Stan.Schools
                 , Stan.Run

   Build-depends:
                 base                    >= 4.6 && <5
               , pretty
               , directory
               , hashable
               , filepath
               , process
               , containers
               , random

Test-Suite test-stan
    type:       exitcode-stdio-1.0
    main-is:    test-stan.hs
    build-depends: base
                 , stanhs