name:                youido
version:             0.1.0.0
synopsis:            Web application constructor kit
description:         Web application constructor kit.
homepage:            https://github.com/diffusionkinetics/open/tree/master/youido
license:             MIT
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          tomn@diffusionkinetics.com
copyright:           Tom Nielsen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/diffusionkinetics/open

Flag example
     Description: Build an example executable
     Default:     False

library
  hs-source-dirs:    lib
  ghc-options:       -fwarn-unused-imports -fno-warn-unused-do-bind -fno-warn-type-defaults
  default-language:  Haskell2010
  exposed-modules:   Youido
                     Youido.Types
                     Youido.Serve
                     Youido.Dashdo
                     Youido.Authentication
  build-depends:       base >= 4.6 && < 5
                     , text
                     , lucid
                     , lucid-extras
                     , microlens
                     , mtl
                     , random-fu
                     , scotty
                     , postgresql-simple
                     , wai-middleware-static
                     , wai-extra
                     , wai
                     , aeson
                     , bytestring
                     , http-types
                     , dashdo
                     , void
                     , microlens-platform
                     , stm
                     , containers
                     , random
                     , scotty-cookie
                     , bcrypt
                     , split
                     , parsec
                     , digestive-functors
                     , digestive-functors-lucid
                     , transformers

Executable youido-example
  main-is: examples/Example.hs
  if flag(example)
           Buildable:     True
  else
           Buildable:     False

  build-depends:       base >=4.6 && <5
                     , youido
                     , lucid
                     , lucid-extras
                     , dashdo
                     , mtl
                     , wai
                     , microlens-platform
                     , text
                     , datasets
